-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 12
-
Component/s: hotspot
-
b05
Methods Metadata::print_value_on_maybe_null() and Metadata::print_value_on() compare 'this' with NULL. The compiler is free to elide these tests, since (this == NULL) can never be true; applying an ordinary member function to NULL invokes undefined behavior. These functions should be changed to be static member functions.
- relates to
-
JDK-8209087 Clean up runtime code that compares 'this' to NULL
-
- Resolved
-