8208399: Metadata methods print_(value_)on_maybe_null() compare 'this' to NULL

Add Method* parameter and make method static to avoid 'this' comparison with NULL

Reviewed-by: lfoltan, gziemski, coleenp